<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <!-- Заголовок чата -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="60dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:paddingTop="10sp"
            android:paddingBottom="8sp"
            android:text="@string/chat_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- Содержимое чата в ScrollView -->
    <ScrollView
        android:id="@+id/chatScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:layout_above="@+id/blockingButtonsLayout">

        <LinearLayout
            android:id="@+id/chatContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Текст отправителя -->

            <TextView
                android:id="@+id/senderTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/sender_name"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusSender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:padding="8dp"
                android:text="@string/status"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_background"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/senderTexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="сообщения"
                    android:textColor="@color/purple_200"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="15dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Этот контейнер будет содержать сообщения чата -->
            <LinearLayout
                android:id="@+id/messageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <!-- Здесь будут отображаться сообщения чата -->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Кнопки блокировки и разблокировки -->
    <LinearLayout
        android:id="@+id/blockingButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/blocking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_button_blocking" />

        <Button
            android:id="@+id/unBlocking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_button_dontBlocking" />

    </LinearLayout>

</RelativeLayout>
